# 2025-ros2-project

./: 2022112091_embedded_project.rviz  README.md
ros2_ws/src/embedded_project/: CMakeLists.txt  package.xml
ros2_ws/src/embedded_project/config/: camera_extrinsics.yaml
ros2_ws/src/embedded_project/include/embedded_project/: sensor_utils.hpp
ros2_ws/src/embedded_project/src/: client_node.cpp  sensor_utils.cpp  service_node.cpp
ros2_ws/src/embedded_project/srv/: SetFilterConfig.srv
